# cora-cli

./: .agent.md  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  install-bundle.sh  install.sh
.github/actions/cora-review/: action.yml
.github/actions/cora-review-simple/: action.yml
.github/workflows/: ci.yml  cora-review.yml  deploy-website.yml  project-sync.yml  release.yml
docs/: CONFIG-REDESIGN.md  FEATURE-DESIGN.md  changelog.md  cli-reference.md  code-intelligence.md  configuration.md  examples.md  fix-plan-v0.6.2.md  getting-started.md  index.md  installation.md  package-lock.json  package.json  providers.md  roadmap.md  usage.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: FadeIn.vue  LandingPage.vue  TerminalDemo.vue  TypingText.vue
docs/public/: _redirects
docs/standards/: codecora-data-directory.md
scripts/: extract_code_tokens.py
src/: data_dir.rs  error.rs  main.rs  progress.rs
src/commands/: auth.rs  commit_cmd.rs  completion.rs  config_cmd.rs  debt.rs  hook_cmd.rs  init.rs  mod.rs  profile.rs  providers.rs  review.rs  scan.rs  upload.rs
src/config/: loader.rs  mod.rs  providers.rs  schema.rs
src/embed/: mod.rs  token_vocab.rs  tokens.rs
src/engine/: cache.rs  chunker.rs  debt_tracker.rs  diff_parser.rs  language_analyzer.rs  llm.rs  markdown.rs  memory.rs  mod.rs  profiles.rs  quality_gate.rs  review.rs  scanner.rs  secrets_scanner.rs  security_scanner.rs  static_analysis.rs  types.rs
src/engine/bundling/: grouping.rs  mod.rs  types.rs
src/engine/context/: extraction.rs  mod.rs  resolver.rs  types.rs
src/engine/rules/: builtin.rs  matching.rs  mod.rs  types.rs
src/formatters/: compact.rs  json_fmt.rs  mod.rs  pretty.rs  sarif.rs
src/git/: diff.rs  files.rs  mod.rs
src/hook/: install.rs  mod.rs  template.rs
src/index/: ast.rs  brain.rs  extract.rs  graph.rs  mod.rs  schema.rs  symbols.rs  vector.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/profiles/: beginner-friendly.yaml  clean-code.yaml  go-pragmatic.yaml  minimal.yaml  performance.yaml  rust-strict.yaml  security-first.yaml  typescript-strict.yaml
tests/: cli_basic.rs  config_loading.rs
website/: components.json  package-lock.json  package.json
website/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
website/.svelte-kit/output/client/.vite/: manifest.json
website/.svelte-kit/output/client/_app/: version.json
website/.svelte-kit/output/client/_app/immutable/chunks/: DozEvg9T.js  Du04-Wio.js  DyVSz01m.js
website/.svelte-kit/output/client/_app/immutable/nodes/: 0.BZeUAe05.js  1.BSJLBHmD.js  11.CBJLxlCn.js  12.D8T_BCyX.js  13.CfK385I2.js  3.D0TU24-D.js  5.CZek6GP7.js  6.ChPTFH0w.js  7.BG-S3wet.js
website/.svelte-kit/output/prerendered/pages/: index.html
website/.svelte-kit/output/prerendered/pages/docs/: configuration.html  getting-started.html  providers.html
website/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
website/.svelte-kit/output/server/.vite/: manifest.json
website/.svelte-kit/output/server/_app/immutable/assets/: _layout.LVaMHZJv.css  _page.B-froF42.css
website/.svelte-kit/output/server/chunks/: Icon.js  client.js  dev.js  environment.js  index-server.js  internal.js  legacy-client.js  shared.js  stores.js
website/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
website/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _layout.ts.js  _page.svelte.js
website/.svelte-kit/output/server/entries/pages/docs/: _layout.svelte.js  _page.svelte.js
website/.svelte-kit/output/server/nodes/: 0.js  1.js  10.js  11.js  12.js  13.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
website/.svelte-kit/types/: route_meta_data.json
website/.svelte-kit/types/src/routes/: $types.d.ts
website/.svelte-kit/types/src/routes/docs/: $types.d.ts
website/.svelte-kit/types/src/routes/docs/changelog/: $types.d.ts
website/.svelte-kit/types/src/routes/docs/cli-reference/: $types.d.ts
website/.svelte-kit/types/src/routes/docs/configuration/: $types.d.ts
website/.svelte-kit/types/src/routes/docs/examples/: $types.d.ts
website/.svelte-kit/types/src/routes/docs/installation/: $types.d.ts
website/src/: app.css  app.d.ts  app.html
website/src/lib/: utils.ts
website/src/lib/components/landing/: ComparisonTable.svelte  FaqSection.svelte  FeatureCard.svelte  FeatureGrid.svelte  HeroSection.svelte  HowItWorks.svelte  KpiStats.svelte  LiveDemo.svelte  QuickStart.svelte  StepCard.svelte  TerminalBlock.svelte  TimelineStep.svelte
website/src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte  accordion.svelte  index.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/docs/: +layout.svelte  +page.svelte
website/src/routes/docs/changelog/: +page.svelte
website/src/routes/docs/cli-reference/: +page.svelte
website/src/routes/docs/configuration/: +page.svelte
website/src/routes/docs/examples/: +page.svelte
website/src/routes/docs/getting-started/: +page.svelte
website/src/routes/docs/installation/: +page.svelte
website/src/routes/docs/providers/: +page.svelte
website/src/routes/docs/roadmap/: +page.svelte
website/src/routes/docs/self-hosted/: +page.svelte
website/src/routes/docs/usage/: +page.svelte
(+12 files in other folders)
