[package]
name = "cora-cli"
version = "0.1.4"
edition = "2024"
description = "CLI-first AI code review — BYOK, diff/scan/branch, pre-commit hooks"
license = "MIT"
repository = "https://github.com/ajianaz/cora-cli"
readme = "README.md"
keywords = ["cli", "code-review", "ai", "git", "pre-commit"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime (only what we need)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client (OpenAI-compatible API calls)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Git operations
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# Terminal output
colored = "3"
indicatif = "0.18"

# File system
dirs = "6"
glob = "0.3"
walkdir = "2"

# Error handling
anyhow = "1"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
regex = "1"
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "cora"
path = "src/main.rs"
